header and background img. added

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=BioRhyme|Hahmlet|Playfair" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>J</title>
 </head>
@@ -10,7 +11,7 @@
 
 <!--Navigation/Header-->
 <header>
-    <h1> Jasmin B. </h1>
+    <h1> Jasmin</h1>
     <nav>
         <ul>
             <li>
@@ -25,10 +26,14 @@
             <li>
                 <a href="#resume">  Resume</a>
             </li>
-        </ul>
+        </ul> 
     </nav>
-    <p> *insert quote here* </p>
 </header>
+
+<section class="sub">
+    <img src="./assets/images/placeimg_1000_200_arch.jpg" alt="Rooftop overlook">
+     <p> Subtitle</p>
+</section>
 
 <!--About me-->
 <section class="Nav">
@@ -43,7 +48,6 @@
 <!--Work-->
 <div class="nav-work">
     <h3> Work </h3>
-
 
 
 
