subheader and image

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -31,8 +31,8 @@
 </header>
 
 <section class="sub">
-    <img src="./assets/images/placeimg_1000_200_arch.jpg" alt="Rooftop overlook">
-     <p> Subtitle</p>
+    <img src="./assets/images/placeimg_1000_200_any.jpg" alt="Rooftop overlook">
+     <h2> Every journey has its final day. Don't rush! </h2>
 </section>
 
 <!--About me-->
