--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,15 +36,23 @@
 </section>
 
 <!--About me-->
-<section class="Nav">
-    <div class="nav-cta">
+<section class="box">
+    <div class="about-cta">
         <h3> About Me </h3>
+    </div>
+    <div class="para">
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. 
+            Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Lacus vestibulum sed arcu non odio euismod lacinia. Nec tincidunt praesent semper feugiat. 
+            Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. At tempor commodo ullamcorper a lacus vestibulum sed arcu non. Eget mi proin sed libero enim sed faucibus. 
+            Sed felis eget velit aliquet sagittis id consectetur purus ut. Ut morbi tincidunt augue interdum. At erat pellentesque adipiscing commodo elit at. 
+            Diam sit amet nisl suscipit adipiscing. Ut pharetra sit amet aliquam id diam. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus.
     </div>
-
+</section>
 <!--Work-->
 <div class="nav-work">
     <h3> Work </h3>
