contact section complete wip for work section

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css?family=BioRhyme|Hahmlet|Playfair" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>J</title>
 </head>
@@ -31,40 +30,70 @@
 </header>
 
 <section class="sub">
-    <img src="./assets/images/placeimg_1000_200_any.jpg" alt="Rooftop overlook">
+    <img src="./assets/images/placeimg_1000_200_any.jpg" alt="cutoff of a man walking">
      <h2> Every journey has its final day. Don't rush! </h2>
 </section>
 
 <!--About me-->
-<section class="box">
-    <div class="about-cta">
-        <h3> About Me </h3>
-    </div>
-    <div class="para">
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. 
-            Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Lacus vestibulum sed arcu non odio euismod lacinia. Nec tincidunt praesent semper feugiat. 
-            Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. At tempor commodo ullamcorper a lacus vestibulum sed arcu non. Eget mi proin sed libero enim sed faucibus. 
-            Sed felis eget velit aliquet sagittis id consectetur purus ut. Ut morbi tincidunt augue interdum. At erat pellentesque adipiscing commodo elit at. 
-            Diam sit amet nisl suscipit adipiscing. Ut pharetra sit amet aliquam id diam. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus.
+<section id="about-me" class="row">
+<div class="column1"> 
+    <h3 class="section-title primary-border"> About Me </h3> </div>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.<br>
+      <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. 
+        Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. 
+        At tempor commodo ullamcorper a lacus vestibulum sed arcu non. Eget mi proin sed libero enim sed faucibus. Sed felis eget velit aliquet sagittis id consectetur purus ut.
+    </p>
     </div>
 </section>
-<!--Work-->
-<div class="nav-work">
-    <h3> Work </h3>
 
+
+<!--Work-->
+<section id="work" class="main">
+    <div class="column1">
+    <h3 class="section-title primary-border"> Work </h3> </div>
+    <div class="images">
+<ul>
+    <li> 
+        <img src="./assets/images/placeimg_640_450_any.jpg" alt="men walking in suits with grey monotone background">
+    </li>
+</ul>
+<ul>
+    <li>
+        <img src="./assets/images/218-430x150.jpg" alt="ocean running between bottom of 2 mountains">
+    </li>
+    <li>
+        <img src="./assets/images/67-430x150.jpg" alt="black and white hill">
+    </li>
+    <li>
+        <img src="./assets/images/372-430x150.jpg" alt="lifesavers hut on beach">
+    </li>
+    <li>
+        <img src="./assets/images/451-430x150.jpg" alt="motel sign">
+    </li>
+</ul>
+    
+
+</section>
 
 
 <!--Contact-->
-<section class="nav-cont" class="class">
-<h3> Contact</h3>
+<footer>
+<section id="contact-me" class="reach">
+    <div class="column1">
+    <h3 class="section-title primary-border">Contact <br>Me<br></h3> </div>
     <p> 555.555.555 </p>
-<div>
     <a href="" >Website</a>
     <a href="https://github.com/loonaj">Github</a>
     <a href="https://open.spotify.com/user/xoxo.jasmin">Spotify</a>
-</div>
+
+
+
+                </div>  
+            </section>
+        </footer>
+    </body>
+</html>
