put images in seperate classes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </header>
 
 <section class="sub">
-    <img src="./assets/images/placeimg_1000_200_any.jpg" alt="cutoff of a man walking">
+    <img src="./assets/images/placeimg_1000_200_any.jpg"  alt="cutoff of a man walking">
      <h2> Every journey has its final day. Don't rush! </h2>
 </section>
 
@@ -58,21 +58,21 @@
     <div class="images">
 <ul>
     <li> 
-        <img src="./assets/images/placeimg_640_450_any.jpg" alt="men walking in suits with grey monotone background">
+        <img src="./assets/images/placeimg_640_450_any.jpg" class="image1" alt="men walking in suits with grey monotone background">
     </li>
 </ul>
 <ul>
     <li>
-        <img src="./assets/images/218-430x150.jpg" alt="ocean running between bottom of 2 mountains">
+        <img src="./assets/images/218-430x150.jpg" class="image2" alt="ocean running between bottom of 2 mountains">
     </li>
     <li>
-        <img src="./assets/images/67-430x150.jpg" alt="black and white hill">
+        <img src="./assets/images/67-430x150.jpg" class="image3" alt="black and white hill">
     </li>
     <li>
-        <img src="./assets/images/372-430x150.jpg" alt="lifesavers hut on beach">
+        <img src="./assets/images/372-430x150.jpg" class="image4" alt="lifesavers hut on beach">
     </li>
     <li>
-        <img src="./assets/images/451-430x150.jpg" alt="motel sign">
+        <img src="./assets/images/451-430x150.jpg" class="image5" alt="motel sign">
     </li>
 </ul>
     
