--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </a>
           <a
             class="grid-item mini-quiz"
-            href="https://loonaj.github.io/mini-quiz/""
+            href="https://loonaj.github.io/mini-quiz/"
             target="_blank"
           >
             <div class="blue-background">
@@ -84,6 +84,16 @@
               <p>JavaScript/CSS</p>
             </div>
           </a>
+          <a
+          class="grid-item project-1"
+          href="https://rush0218.github.io/project-1/"
+          target="_blank"
+        >
+          <div class="blue-background">
+            <h2>Music Dive</h2>
+            <p>JavaScript/CSS/HTML</p>
+        </div>
+        </a>
         </div>
       </article>
     </section>
